--- a/CSharp/packages.config
+++ b/CSharp/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GemBox.Presentation" version="23.0.0.1030" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net472" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.19814.12000" targetFramework="net472" />
   <package id="SharePoint" version="15.0.0" targetFramework="net472" />
 </packages>
